--- a/index.html
+++ b/index.html
@@ -81,6 +81,91 @@
       </div>
     </section>
 
+    <!-- site content -->
+    <main>
+      <section id="section-1" class="d-flex justify-content-center flex-column" >
+        <h1 class="text-center mt-5">Designed for the future</h1>
+          <div class="d-flex flex-row">
+            <div class="container w-50 d-flex justify-content-center flex-column align-items-center">
+            <h2>Introducing an extensible editor</h2>
+            <p class="w-75">  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+              The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+              videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+              change the looks of a blog.</p>
+            <h2>  Robust content management</h2>
+            <p class="w-75">  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+            </div>
+              <div class="container w-50">
+              <img src="images/illustration-editor-desktop.svg" alt="" class="img-fluid max-width: 100% height: auto">
+            </div>
+          </div>
+      </section>
+
+
+        <section id="section-2" class="bg-dark d-flex justify-content-center flex-column" >
+            <div class="d-flex flex-row align-items-center">
+              <div class="container w-50">
+                <img src="images/illustration-phones.svg" alt="" class="img-fluid max-width: 100% height: auto mt-3">
+                </div>
+              <div class="container w-50 d-flex justify-content-center flex-column align-items-center text-light">
+              <h2> State of the Art Infrastructure</h2>
+              <p class="w-75">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+                This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+              </div>
+            </div>
+      </section>
+
+
+      <section id="section-3" class="d-flex justify-content-center flex-column" >
+  
+          <div class="d-flex flex-row">
+            <div class="container w-50">
+              <img src="images/illustration-laptop-desktop.svg" alt="" class="img-fluid max-width: 100% height: auto">
+            </div>
+
+            <div class="container w-50 d-flex justify-content-center flex-column align-items-center">
+            <h2>Free, open, simple</h2>
+            <p class="w-75">  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+              features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+              and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.<p>
+
+            <h2>Powerful tooling</h2>
+            <p class="w-75">  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+              capable of producing even the most complicated sites.</p>
+            </div>
+          </div>
+
+    </main>
+
+    <!-- footer -->
+    <footer class="bg-dark text-light d-flex flex-row justify-content-space-around">
+      <img src="images/logo.svg" alt="logo">
+      <ul class="d-flex flex-column">
+        <li  class="fw-bold mb-3">Product</li>
+        <li>Overview</li>
+        <li>Pricing</li>
+        <li>Marketplace</li>
+        <li>Features</li>
+        <li>Integrations</li>
+      </ul>
+
+      <ul class="d-flex flex-column">
+        <li  class="fw-bold mb-3">Company</li>
+        <li>About</li>
+        <li>Teeam</li>
+        <li>Blog</li>
+        <li>Careers</li>
+      </ul>
+
+      <ul class="d-flex flex-column">
+        <li  class="fw-bold mb-3">Connect</li>
+        <li>Contact</li>
+        <li>Newslettter</li>
+        <li>LinkedIn</li>
+      </ul>
+
+    </footer>
 
   <!-- Product
 
