--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css"></link>
 
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -18,18 +22,21 @@
 </head>
 <body>
      <!-- Navigation -->
+
+     
    
      <section id="nav-bar">
 
-      <nav class="navbar navbar-expand-lg navbar-light ">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
         <a class="navbar-brand logo" href="#"><img src="images/logo.svg" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="collapse navbar-collapse text-center fw-bold" id="navbarNavDropdown">
+          <ul class="navbar-nav w-100">
+            <li class="nav-item dropdown  d-flex align-items-center">
+              <a class="nav-link dropdown-toggle text-center text-white" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Product
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -39,8 +46,8 @@
               </div>
             </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown  d-flex align-items-center">
+              <a class="nav-link dropdown-toggle text-center text-white" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Company
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -50,8 +57,8 @@
               </div>
             </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown  d-flex align-items-center">
+              <a class="nav-link dropdown-toggle text-center text-white" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Connect
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -60,30 +67,61 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
-              <!-- buttons -->
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><button>Login</button></a>
-              </li>
-
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><button>Sign Up</button></a>
-              </li>
-
+            <div class="d-flex justify-content-end align-items-center w-25"></div>
+            <li class="d-flex align-items-center"><button class="btn text-light type-1 ms-5">Login</button></li>
+            <li class="d-flex align-items-center"><button class="btn type-2">Sign Up</button></li>
+          </div>
           </ul>
+        </div>
         </div>
       </nav>
 
+      <!-- <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand logo" href="#"><img src="images/logo.svg" alt="logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav> -->
+
       <!-- banner -->
-      <div id="banner" class="container">
+      
+      <div id="banner" class="container d-flex flex-column justify-content-center text-light w-100 align-items-center">
         <h1>A modern publishing platform</h1>
         <p>Grow your audience and build your online brand</p>
-        <button class="m-5">Start for Free</button> <button class="m-5">Learn More</button>
+        <div class="container d-flex flex-row justify-content-center">
+         <button class="btn mx-2 type-2">Start for Free</button> <button class="btn border-light mx-2 text-light type-1">Learn More</button>
+        </div>
       </div>
     </section>
 
     <!-- site content -->
     <main>
-      <section id="section-1" class="d-flex justify-content-center flex-column" >
+      <section id="section-1" class="d-flex justify-content-center flex-column mt-5" >
         <h1 class="text-center mt-5">Designed for the future</h1>
           <div class="d-flex flex-row">
             <div class="container w-50 d-flex justify-content-center flex-column align-items-center">
@@ -120,8 +158,8 @@
       <section id="section-3" class="d-flex justify-content-center flex-column" >
   
           <div class="d-flex flex-row">
-            <div class="container w-50">
-              <img src="images/illustration-laptop-desktop.svg" alt="" class="img-fluid max-width: 100% height: auto">
+            <div id="image-container"class="w-50 d-flex justify-content-center my-5">
+              <img src="images/illustration-laptop-desktop.svg" alt="" class="img-fluid max-width: 100% height: auto my-5">
             </div>
 
             <div class="container w-50 d-flex justify-content-center flex-column align-items-center">
@@ -139,9 +177,10 @@
     </main>
 
     <!-- footer -->
-    <footer class="bg-dark text-light d-flex flex-row justify-content-space-around">
-      <img src="images/logo.svg" alt="logo">
-      <ul class="d-flex flex-column">
+    <footer class="bg-dark">
+      <div class="text-light d-flex flex-row justify-content-around footer-content">
+      <img class="logo"src="images/logo.svg" alt="logo" class="m-5">
+      <ul class="d-flex flex-column m-5">
         <li  class="fw-bold mb-3">Product</li>
         <li>Overview</li>
         <li>Pricing</li>
@@ -150,7 +189,7 @@
         <li>Integrations</li>
       </ul>
 
-      <ul class="d-flex flex-column">
+      <ul class="d-flex flex-column m-5">
         <li  class="fw-bold mb-3">Company</li>
         <li>About</li>
         <li>Teeam</li>
@@ -158,13 +197,13 @@
         <li>Careers</li>
       </ul>
 
-      <ul class="d-flex flex-column">
+      <ul class="d-flex flex-column m-5">
         <li  class="fw-bold mb-3">Connect</li>
         <li>Contact</li>
         <li>Newslettter</li>
         <li>LinkedIn</li>
       </ul>
-
+      </div>
     </footer>
 
   <!-- Product
@@ -248,6 +287,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
   <!-- scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
