--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -30,45 +30,49 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
         <a class="navbar-brand logo" href="#"><img src="images/logo.svg" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon text-light
+          "></span>
         </button>
         <div class="collapse navbar-collapse text-center fw-bold" id="navbarNavDropdown">
           <ul class="navbar-nav w-100">
             <li class="nav-item dropdown  d-flex align-items-center">
-              <a class="nav-link dropdown-toggle text-center text-white" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-center " href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Product
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">Overview</a>
+                <a class="dropdown-item" href="#">Pricing</a>
+                <a class="dropdown-item" href="#">marketplace</a>
+                <a class="dropdown-item" href="#">Features</a>
+                <a class="dropdown-item" href="#">Integrations</a>
               </div>
             </li>
 
             <li class="nav-item dropdown  d-flex align-items-center">
-              <a class="nav-link dropdown-toggle text-center text-white" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-center " href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Company
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">About</a>
+                <a class="dropdown-item" href="#">Team</a>
+                <a class="dropdown-item" href="#">Blog</a>
+                <a class="dropdown-item" href="#">Careers</a>
               </div>
             </li>
 
             <li class="nav-item dropdown  d-flex align-items-center">
-              <a class="nav-link dropdown-toggle text-center text-white" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-center " href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Connect
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">Contact</a>
+                <a class="dropdown-item" href="#">Newsletter</a>
+                <a class="dropdown-item" href="#">LinkdIn</a>
               </div>
             </li>
             <div class="d-flex justify-content-end align-items-center w-25"></div>
-            <li class="d-flex align-items-center"><button class="btn text-light type-1 ms-5">Login</button></li>
+            <li id="login" class="d-flex align-items-center"><button class="btn text-light type-1">Login</button></li>
             <li class="d-flex align-items-center"><button class="btn type-2">Sign Up</button></li>
           </div>
           </ul>
@@ -76,43 +80,13 @@
         </div>
       </nav>
 
-      <!-- <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand logo" href="#"><img src="images/logo.svg" alt="logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav> -->
+
 
       <!-- banner -->
       
-      <div id="banner" class="container d-flex flex-column justify-content-center text-light w-100 align-items-center">
-        <h1>A modern publishing platform</h1>
-        <p>Grow your audience and build your online brand</p>
+      <div id="banner" class="container d-flex flex-column justify-content-center text-light w-100 align-items-center mb-5">
+        <h1 class="mt-5">A modern publishing platform</h1>
+        <p class="mb-5">Grow your audience and build your online brand</p>
         <div class="container d-flex flex-row justify-content-center">
          <button class="btn mx-2 type-2">Start for Free</button> <button class="btn border-light mx-2 text-light type-1">Learn More</button>
         </div>
@@ -120,49 +94,52 @@
     </section>
 
     <!-- site content -->
-    <main>
+    <main class="mt-5">
+      <!-- section 1 -->
       <section id="section-1" class="d-flex justify-content-center flex-column mt-5" >
-        <h1 class="text-center mt-5">Designed for the future</h1>
-          <div class="d-flex flex-row">
-            <div class="container w-50 d-flex justify-content-center flex-column align-items-center">
-            <h2>Introducing an extensible editor</h2>
-            <p class="w-75">  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+        <h1 id="s1-title" class="text-center mb-5">Designed for the future</h1>
+          <div id="s1-container" class="d-flex flex-row">
+            <div  id="s1-text-container"class="container w-50 d-flex justify-content-start flex-column align-items-center ms-5  lh-lg">
+            <h2 class="mt-5">Introducing an extensible editor</h2>
+            <p class="mb-5 ms-5 w-75">  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
               The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
               videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
               change the looks of a blog.</p>
-            <h2>  Robust content management</h2>
-            <p class="w-75">  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            <h2 class="me-4">  Robust content management</h2>
+            <p class="mb-5 ms-5 w-75">  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
             by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
             </div>
-              <div class="container w-50">
-              <img src="images/illustration-editor-desktop.svg" alt="" class="img-fluid max-width: 100% height: auto">
+              <div id="s1-image-container" class="w-50 d-flex justify-content-center flex-column">
+              <img id="desktop-img" src="images/illustration-editor-desktop.svg" alt="desktop" class="mb-5 img-fluid">
+              <img id="mobile-img" src="images/illustration-editor-mobile.svg" alt="mobile" class="mb-5 img-fluid d-none">
             </div>
           </div>
       </section>
 
-
-        <section id="section-2" class="bg-dark d-flex justify-content-center flex-column" >
-            <div class="d-flex flex-row align-items-center">
-              <div class="container w-50">
-                <img src="images/illustration-phones.svg" alt="" class="img-fluid max-width: 100% height: auto mt-3">
+        <!--section 2 -->
+        <section id="section-2" class=" d-flex justify-content-center flex-column" >
+            <div id="s2-container" class="d-flex flex-row align-items-center">
+              <div id="s2-image-container" class="container w-50 mt-5">
+                <img src="images/illustration-phones.svg" alt="phones" id="img-1" class="img-fluid max-width: 100% height: auto mt-3">
                 </div>
-              <div class="container w-50 d-flex justify-content-center flex-column align-items-center text-light">
-              <h2> State of the Art Infrastructure</h2>
-              <p class="w-75">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+              <div id="s2-text-container"class="container w-50 d-flex justify-content-center flex-column align-items-center text-light">
+              <h1> State of the Art Infrastructure</h1>
+              <p class="w-75 lh-base lh-lg">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
                 This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
               </div>
             </div>
       </section>
 
-
-      <section id="section-3" class="d-flex justify-content-center flex-column" >
+      <!-- section 3 -->
+      <section id="section-3" >
   
-          <div class="d-flex flex-row">
-            <div id="image-container"class="w-50 d-flex justify-content-center my-5">
-              <img src="images/illustration-laptop-desktop.svg" alt="" class="img-fluid max-width: 100% height: auto my-5">
+          <div id="s3-container"class="d-flex flex-row justify-content-center align-items-center">
+            <div id="s3-image-container"class="d-flex justify-content-center my-5">
+              <img id="s3-desktop" src="images/illustration-laptop-desktop.svg" alt="desktop" class="img fluid my-5">
+              <img id="s3-mobile"src="images/illustration-laptop-mobile.svg" alt="mobile" class="img fluid my-5 d-none">
             </div>
 
-            <div class="container w-50 d-flex justify-content-center flex-column align-items-center">
+            <div id="s3-text-container"class="container d-flex justify-content-center flex-column align-items-start lh-lg">
             <h2>Free, open, simple</h2>
             <p class="w-75">  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
               features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
@@ -178,30 +155,30 @@
 
     <!-- footer -->
     <footer class="bg-dark">
-      <div class="text-light d-flex flex-row justify-content-around footer-content">
+      <div id="footer" class="text-light d-flex flex-row justify-content-around footer-content pt-5">
       <img class="logo"src="images/logo.svg" alt="logo" class="m-5">
-      <ul class="d-flex flex-column m-5">
+      <ul class="d-flex flex-column m-5 lh-lg">
         <li  class="fw-bold mb-3">Product</li>
         <li>Overview</li>
         <li>Pricing</li>
         <li>Marketplace</li>
         <li>Features</li>
-        <li>Integrations</li>
+        <li class="mb-5">Integrations</li>
       </ul>
 
-      <ul class="d-flex flex-column m-5">
+      <ul class="d-flex flex-column m-5 lh-lg">
         <li  class="fw-bold mb-3">Company</li>
         <li>About</li>
         <li>Teeam</li>
         <li>Blog</li>
-        <li>Careers</li>
+        <li class="mb-5">Careers</li>
       </ul>
 
-      <ul class="d-flex flex-column m-5">
+      <ul id="footer-bottom"class="d-flex flex-column m-5 lh-lg">
         <li  class="fw-bold mb-3">Connect</li>
         <li>Contact</li>
         <li>Newslettter</li>
-        <li>LinkedIn</li>
+        <li class="mb-5">LinkedIn</li>
       </ul>
       </div>
     </footer>
@@ -286,6 +263,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
   <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
