--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -37,7 +38,7 @@
         <div class="collapse navbar-collapse text-center fw-bold" id="navbarNavDropdown">
           <ul class="navbar-nav w-100">
             <li class="nav-item dropdown  d-flex align-items-center">
-              <a class="nav-link dropdown-toggle text-center " href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a id="product" class="nav-link dropdown-toggle text-center " href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Product
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -72,8 +73,9 @@
               </div>
             </li>
             <div class="d-flex justify-content-end align-items-center w-25"></div>
+            <li id="line"></li>
             <li id="login" class="d-flex align-items-center"><button class="btn text-light type-1">Login</button></li>
-            <li class="d-flex align-items-center"><button class="btn type-2">Sign Up</button></li>
+            <li id="sign-up" class="d-flex align-items-center"><button class="btn type-2">Sign Up</button></li>
           </div>
           </ul>
         </div>
